[ci] Cleanup performance problems with wrapper object usage